--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,10 +1,11 @@
-!!!
+!!! 5
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", :lang => "en"}
   %head
     %meta{"http-equiv" => "Content-Type", :content=>"text/html; charset=utf-8"}
-    %meta{:name => "robots", :content => "all"} 
+    -#%meta{:name => "robots", :content => "all"} 
     %meta{:name => "description", :content => "Electronic Music"}   
-    %link{:rel=>"stylesheet", :href=>"/style.css", :type => "text/css"}
+    %script{ :src=>"/js/jquery-1.8.3.min.js", :type=>"text/javascript"}
+    -#%link{:rel=>"stylesheet", :href=>"/style.css", :type => "text/css"}
 
     %title alfadeo pipeline
     
