--- a/views/overview.haml
+++ b/views/overview.haml
@@ -48,23 +48,23 @@
 %hr
 - @records.each_with_index do |record, idx|
   #div{:id=>"#{record.gsub(".mp3","")}"}
-    %h2
+    %h3
       = record
     %br
     %br
     %audio{ :src=>"#{record}", :id=>"player#{idx}", :controls=>"controls"}
   :javascript
-    var audio = document.getElementById("player#{idx}");
-    /*audio.addEventListener("playing", function() {
+    var audio#{idx} = document.getElementById("player#{idx}");
+    audio#{idx}.addEventListener("playing", function() {
       $.each($('audio'), function(){
-        if(this !== audio){
+        if(this !== audio#{idx}){
           this.pause()
         }
       })
-    })*/
-    audio.addEventListener("ended", function() {
-      audio = document.getElementById("player#{idx+1}");
-      audio.play();
+    })
+    audio#{idx}.addEventListener("ended", function() {
+      //audio = document.getElementById("player#{idx+1}");
+      audio#{idx+1}.play();
     })
 
   = haml :edit, :locals => {:record => "#{record}", :idx => idx}
