--- a/views/edit.haml
+++ b/views/edit.haml
@@ -1,25 +1,25 @@
-
 - @text = File.read File.join "public", locals[:record].gsub(".mp3", ".txt")
 - @text.gsub!(/\\r\\n/, "<br>")
 - @id = locals[:record].gsub(".mp3", "")
 - idx = locals[:idx]
+%button.btn.btn-default.btn-sm{:type=>"button", :data=>{:toggle=>"collapse", :target=>"#text_#{idx}"}} more
 %br
-%text{:id=>"#{idx}"}
+#text.collapse{:id=>"#{idx}"}
   = @text
-%form{:action => "/update/#{locals[:record].gsub(".mp3", ".txt")}", :method => "post"}
-  %textarea{ :id =>"field#{idx}", :name=>"comment", :rows=>3, :cols=>40} comment 
-  %input{:id =>"submit_#{idx}", :type=>"submit", :value=>"submit", :onclick => "update('#{idx}')", :style=>"margin:5px;" }
-  :javascript
-    function update(idx){
-      var x = document.getElementById('field'+idx).value;
-      var y = document.getElementById(idx);
-      y.innerHTML = y.innerHTML + '- "' + x + '"<br>' 
-    }
-#delete{:style=>"display:inline;margin-right:1em;"}
-  %a{ :href=>"#{to("/delete/#{locals[:record]}")}", :style=>"text-decoration:none;"}
-    delete
-#download{:style=>"display:inline;text-decoration:none;margin-right:1em;"}
-  %a{ :href=>"#{to("/download/#{locals[:record]}")}", :style=>"text-decoration:none;"}
-    download 
-  (right click)
-%p{:style=>"margin-bottom:4em;"}
+  %br
+  %form{:action => "/update/#{locals[:record].gsub(".mp3", ".txt")}", :method => "post"}
+    %textarea.form-control{ :id =>"field#{idx}", :name=>"comment", :placeholder=>"comment"}
+    %br  
+    %input.btn.btn-default{:id =>"submit_#{idx}", :type=>"submit", :value=>"submit", :onclick => "update('#{idx}')" }
+    :javascript
+      function update(idx){
+        var x = document.getElementById('field'+idx).value;
+        var y = document.getElementById(idx);
+        y.innerHTML = y.innerHTML + '- "' + x + '"<br>' 
+      }
+    #delete.btn.btn-default{:style=>"display:inline;margin-right:1em;"}
+      %a{ :href=>"#{to("/delete/#{locals[:record]}")}", :style=>"text-decoration:none;"}
+        delete
+    #download.btn.btn-default{:style=>"display:inline;text-decoration:none;margin-right:1em;"}
+      %a{ :href=>"#{to("/download/#{locals[:record]}")}", :style=>"text-decoration:none;"}
+        download
