--- a/views/layout.haml
+++ b/views/layout.haml
@@ -29,7 +29,9 @@
             %a{ :href => "/upload" , :style=>"text-decoration:none;" } upload
           %li{:class => ("selected" if /links|\/$/ =~ request.path)}
             %a{ :href => "/links" , :style=>"text-decoration:none;" } links
-      
+          %li
+            %a{ :href => "/" , :style=>"text-decoration:none;" }
+              = "user: "+@@user
     %div.container-fluid
       = yield
   
