--- a/views/upload.haml
+++ b/views/upload.haml
@@ -1,7 +1,7 @@
 %h3
   upload(mp3):
 
-%form.well{:action=>"/upload", :method=>"post", :enctype=>'multipart/form-data'}
-  %input{:type=>'file', :name=>'file'}
+%form.well{:action=>"/upload", :method=>"post", :type=>"file"}
+  %input{:type=>'file', :name=>'file', :accept=>"audio/*"}
   %br
   %input.btn.btn-default{:type=>'submit', :value=>'Upload'}
