--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %meta{"http-equiv" => "X-UA-Compatible", :content=>"IE=edge; charset=utf-8"}
     %meta{:name => "viewport", :content => "width=device-width; initial-scale=1"}
-    %meta{:name => "robots", :content => "all"} 
+    %meta{:name => "robots", :content => "none"}
     %meta{:name => "description", :content => "Electronic Music"}
     %script{:src=>"/js/jquery-1.11.2.min.js", :type=>"text/javascript"}
     %script{:src=>"/js/bootstrap.min.js", :type=>"text/javascript"}
