--- a/views/links.haml
+++ b/views/links.haml
@@ -1,8 +1,12 @@
-#div.well
-  - @text = File.read File.join "public/links.txt"
-  - @text.gsub!(/\\r\\n/, "<br>")
-  %text
-    = @text.gsub("\"", "")
+%div.well
+  - links.each.with_index do |link, idx|
+    %a.badge{:href=>"/delete/link/#{idx+1}", :style=>"float:left;margin-right:1em;"} x
+    %p= link
+
+  %hr
   %form{:name => "form", :action => to('/links'), :method => "post", :enctype => "multipart/form-data" }
-    %input{:id =>"submit", :type=>"text", :name=>"comment", :value=>"", :size=>"100" }
-    %button{:id=>"store"} store
+    %input{:type=>"text", :name=>"comment", :placeholder=>"link:", :size=>"80", :style=>"margin:10px 0px 10px 0px;" }
+    %br
+    %input{:type=>"text", :name=>"title", :placeholder=>"description (not required):", :size=>"30" }
+    %br
+    %button{:id=>"submit", :style=>"margin:10px 0px 10px 0px;"} save
