added type for audio elem

--- a/views/overview.haml
+++ b/views/overview.haml
@@ -7,7 +7,7 @@
   #div.well.well-sm{:id=>"#{record.gsub(/\.mp3|\.wav/,"")}"}
     %h3{:style=>"display:block;"}
       = record.gsub(/\.mp3|\.wav/,"")
-    %audio{ :src=>"#{record}", :id=>"player#{idx}", :controls=>"controls", :style=>"float:left;"}
+    %audio{ :src=>"#{record}", :type=>(record =~ /wav$/ ? "audio/wav" : "audio/mpeg"), :id=>"player#{idx}", :controls=>"controls"}
     :javascript
       var audio#{idx} = document.getElementById("player#{idx}");
       audio#{idx}.addEventListener("playing", function() {
